--- a/themes/hexo-theme-Claudia/layout/widget/base.pug
+++ b/themes/hexo-theme-Claudia/layout/widget/base.pug
@@ -13,6 +13,7 @@ html(lang=config.language class= `appearance-${ appearance }`)
     meta(charset='UTF-8')
     title= pageTitle
     meta(name="description" content= config.description || theme.user && theme.user.description)
+    meta(name="keywords" content= config.keywords)
     meta(name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, initial-scale=1")
 
     link(rel="icon" href= url_for(theme.favicon))
